# ImageFind

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  devenv.nix
src/: background.rs  cli.rs  lib.rs  main.rs  routes.rs  sidecar_scan.rs
src/processing/: cache.rs  image.rs  mod.rs  raw.rs  tiff.rs  video.rs
templates/: index.html  search_footer.html  search_header.html
tests/: raw_extraction_test.rs
tests/data/: 2009-07-14_115409.NEF.xmp
utils/: transcodePreviewVideos.sh
