[package]
name = "ImageFind"
version = "0.2.0"
edition = "2021"

[dependencies]
walkdir = "2"
quick-xml = "0.38.3"
xxhash-rust = {version = "0.8.5", features = ["xxh3", "const_xxh3"]}
rayon = "1.11.0"
actix-web = "4"
serde = { version = "1.0.222", features = ["derive"] }
serde_json = "1.0.145"
rusqlite = "0.37.0"
image = { version = "0.25.8", features = ["tiff", "png", "jpeg", "gif", "bmp", "webp"] }
base64 = "0.22.1"
futures = "0.3"
tokio = { version = "1.47.1", features = ["full"] }
sha2 = "0.10"
num_cpus = "1.16"
urlencoding = "2.1"
tiff = "0.10.3"
clap = { version = "4.5.47", features = ["derive"] }
log = "0.4.28"
env_logger = "0.11.8"
once_cell = "1.18"